--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ body {
     font-weight: 300;
     font-size: 16px;
     background-color: #fff;
-    color: #fff;
+    /*color: #fff;*/
     overflow-x: hidden;
     overflow: hidden
 }
